[tool.poetry]
name = "Art-Dam-3254_linux"
version = "1.0.0"
description = "python support for ART DAM3254"
authors = ["xiaoling <samuel.ling.xiao@qq.com>"]
readme = "README.md"
packages = [{include = "src/*"}]

[tool.poetry.dependencies]
python = "3.10.*"
pre-commit = "4.2.0"
pyinstaller = "^6.14.2"
pyserial = "^3.5"
pydantic = "^2.11.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
